--- a/templates/template.html
+++ b/templates/template.html
@@ -231,6 +231,7 @@
 
     <div class="parallax-content projects-content" id="wildfires">
         <div class="container">
+            <h1 style="color: #da5700; text-align: center; padding:10px; background-color: rgba(0, 0, 0, 0.25); border-radius: 15px;"><b>Past and Current Wildfires</b></h1>
             <div class="row">
                 <div class="col-md-12">
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
@@ -335,34 +336,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="primary-button">
-                        <a href="#home">Back To Top</a>
-                    </div>
-                    <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                    </ul>
-                    <p>Copyright &copy; 2019 Company Name
-
-            		- Design: <a rel="nofollow noopener" href="https://templatemo.com"><em>TemplateMo</em></a></p>
-                </div>
-            </div>
-        </div>
-    </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{% static "js/vendor/jquery-1.11.2.min.js" %}"><\/script>')</script>
@@ -536,7 +509,7 @@
 
 
                     document.getElementById('image').src = mapUrl;
-                    document.getElementById("predicty").innerText = (prediction * 100) + "% chance of Wildfire";
+                    document.getElementById("predicty").innerText = (prediction * 100).toFixed(2) + "% chance of Wildfire";
 
                     document.getElementById("but").innerText = "Predict Now";
                     document.getElementById("but").disabled = false;
