fix: removed extra char

--- a/templates/template.html
+++ b/templates/template.html
@@ -278,7 +278,7 @@
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <a href="img/2nd-big-item.jpg" data-lightbox="image-1">></a>
+                                <a href="img/2nd-big-item.jpg" data-lightbox="image-1"></a>
                                 <div class="text-content">
                                     <h4 style="color: #ff7d27">Dixie Fire, California</h4>
                                     <br>
