feat: updated 3rd section

--- a/templates/template.html
+++ b/templates/template.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <!--    <title>Vanilla Bootstrap v4.2.1 Theme</title>-->
     <meta name="description" content="">
+    <link rel="icon" type="image/png" href="{% static 'img/favico.ico' %}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
@@ -238,7 +239,6 @@
                     <div class="wrapper">
                     <section id="first-tab-group" class="tabgroup">
                       <div id="tab1">
-                        <img src="img/1st-tab.jpg" alt="">
                         <p>Please do not re-distribute our template ZIP file on your template collection sites. You can make a screenshot and a link back to our website. This template can be used for personal or commercial purposes by end-users.</p>
                       </div>
                       <div id="tab2">
@@ -255,10 +255,10 @@
                       </div>
                     </section>
                     <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                      <li><a href="#tab1" class="active">2008 - 2014</a></li>
-                      <li><a href="#tab2">2014 - 2016</a></li>
-                      <li><a href="#tab3">2016 - 2019</a></li>
-                      <li><a href="#tab4">2019 - Now</a></li>
+                      <li><a href="#tab1" class="active">NDVI</a></li>
+                      <li><a href="#tab2">LST</a></li>
+                      <li><a href="#tab3">TA</a></li>
+                      <li><a href="#tab4">Model Accuracy</a></li>
                     </ul>
                     </div>
                 </div>
