feat: finishing touches

--- a/static/css/templatemo-main.css
+++ b/static/css/templatemo-main.css
@@ -408,7 +408,7 @@ section {
 }
 
 .tabgroup p {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, .75);
   color: #fff;
   padding: 25px;
 }
