feat: Remove API Keys and fix CSS

--- a/static/css/templatemo-main.css
+++ b/static/css/templatemo-main.css
@@ -1,11 +1,3 @@
-/*
-
-Vanilla Template
-
-https://templatemo.com/tm-526-vanilla
-
-*/
-
 p {
   font-size: 15px;
   line-height: 25px;
@@ -109,7 +101,7 @@ a:hover { color: #ff7d27; }
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   border-color: black;
-  boder-right: 0;
+  border-right: 0;
 }
 .fixed-side-navbar .nav > li a:hover > span {
   color: #da5700;
